# temperature-messurement

./: CMakeLists.txt  README.md
config/: temperature_config.txt
include/: config.h  defaults.h  ring_buffer.h  temperature_buffer.h  temperature_buffer_deque.h
scripts/: test_loop.sh
src/: config.cpp  main.cpp
tests/: test_ring_buffer.cpp  test_temperature_buffer.cpp  test_temperature_buffer_deque.cpp  test_temperature_generator.cpp
